Componente header finalizado o estilo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,29 @@
-<p>header works!</p>
+<header class="main-header">
+    <h1 class="main-header__title">
+        <span class="main-header__title--blue">ProWay</span><span class="main-header__title--orange">Computers</span>
+    </h1>
+    <div class="container-menu">
+        <nav class="main-header__menu">
+            <ul>
+                <li>
+                    <a>Produtos</a>
+                </li>
+                <li>
+                    <a>
+                        <i class="fa-sharp fa-solid fa-cart-shopping"></i>
+                        Carrinho
+                        <span class="badge-carrinho">0</span>
+                    </a>
+                </li>
+                <li><a><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li><a><i class="fa-brands fa-square-instagram"></i></a></li>
+                <li><a><i class="fa-brands fa-square-twitter"></i></a></li>
+                <li><a><i class="fa-brands fa-linkedin"></i></a></li>
+            </ul>
+        </nav>
+        <form class="search-form">
+            <input type="text">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+    </div>
+</header>
