--- a/src/app/produtos/detalhe-produto/detalhe-produto.component.html
+++ b/src/app/produtos/detalhe-produto/detalhe-produto.component.html
@@ -14,6 +14,6 @@
         <p class="product__avaiability">
             {{ produto?.quantidade }} unidade(s) em estoque
         </p>
-        <button>Adicionar ao carrinho</button>
+        <button (click)="adicionarAoCarrinho()">Adicionar ao carrinho</button>
     </div>
 </section>
