Salvando no localStorage a quantidade de produtos e adicionando funcionalidade ao contador do carrinho

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
                     <a>
                         <i class="fa-sharp fa-solid fa-cart-shopping"></i>
                         Carrinho
-                        <span class="badge-carrinho">0</span>
+                        <span class="badge-carrinho">{{ carrinhoService.obterCarrinho().length }}</span>
                     </a>
                 </li>
                 <li><a><i class="fa-brands fa-square-facebook"></i></a></li>
