Adicionado remove produto carrinho e calcular valor total do carrinho

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,17 +1,19 @@
 <h2 class="cart-title">Carrinho</h2>
-<div>
+<div *ngIf="itensCarrinho.length > 0; else: semProduto">
     <ul>
-        <li>
-            <img src="assets/monitor-1.jpg" alt="">
-            <p>Monitor</p>
-            <p>Preço: R$ 1300</p>
+        <li *ngFor="let itemCarrinho of itensCarrinho">
+            <img [src]="itemCarrinho.imagem" alt="">
+            <p>{{ itemCarrinho.descricao }}</p>
+            <p>{{ itemCarrinho.preco | currency: "BRL" }}</p>
             <label>
                 Quantidade:
-                <input type="number">
+                <input type="number" [(ngModel)]="itemCarrinho.quantidade" (change)="calculaTotal()">
             </label>
-            <button class="remove-button"><i class="fa-solid fa-xmark"></i></button>
+            <button class="remove-button" (click)="removerProdutoCarrinho(itemCarrinho.id)"><i class="fa-solid fa-xmark"></i></button>
         </li>
     </ul>
-    <h2 class="cart-total">Total: R$ 1300</h2>
+    <h2 class="cart-total">Total: {{ total | currency: "BRL"}}</h2>
     <button class="buy-button">Comprar</button>
 </div>
+
+<ng-template #semProduto>Nenhum produto foi adicionado ao carrinho</ng-template>
