--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,10 +6,10 @@
         <nav class="main-header__menu">
             <ul>
                 <li>
-                    <a>Produtos</a>
+                    <a routerLink="produtos">Produtos</a>
                 </li>
                 <li>
-                    <a>
+                    <a routerLink="carrinho">
                         <i class="fa-sharp fa-solid fa-cart-shopping"></i>
                         Carrinho
                         <span class="badge-carrinho">{{ carrinhoService.obterCarrinho().length }}</span>
