Adicionando funcionalidade ao botao finalizar compra

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -13,7 +13,7 @@
         </li>
     </ul>
     <h2 class="cart-total">Total: {{ total | currency: "BRL"}}</h2>
-    <button class="buy-button">Comprar</button>
+    <button class="buy-button" (click)="comprar()">Comprar</button>
 </div>
 
 <ng-template #semProduto>Nenhum produto foi adicionado ao carrinho</ng-template>
