Adicionado html e estilo a pagina de contato

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,1 +1,14 @@
-<p>contato works!</p>
+<h2 class="contact__title">Entre em contato</h2>
+<section class="contact__container">
+    <form class="contact-form">
+        <input type="text" placeholder="Digite o seu nome" />
+        <input type="assunto" placeholder="Digite seu assunto" />
+        <input type="tel" placeholder="(00) 0 0000-0000" />
+        <input type="email" placeholder="Digite o seu e-mail" />
+        <textarea maxlength="300"></textarea>
+    </form>
+    <address>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3557.575243409005!2d-49.07492082564626!3d-26.91697234174424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1683253211508!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>ProWay - R. 7 de Setembro, 1600 - 14º andar - Centro, Blumenau - SC, 89010-204</p>
+    </address>
+</section>
