--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,11 +1,102 @@
 <h2 class="contact__title">Entre em contato</h2>
 <section class="contact__container">
-    <form class="contact-form">
-        <input type="text" placeholder="Digite o seu nome" />
-        <input type="assunto" placeholder="Digite seu assunto" />
-        <input type="tel" placeholder="(00) 0 0000-0000" />
-        <input type="email" placeholder="Digite o seu e-mail" />
-        <textarea maxlength="300"></textarea>
+    <form class="contact-form" [formGroup]="formContato" (ngSubmit)="enviarFormulario()">
+        <input 
+            type="text" 
+            placeholder="Digite o seu nome" 
+            formControlName="nome"
+            [class.valid]="formContato.controls['nome'].valid"
+            [class.invalid]="formContato.controls['nome'].invalid && 
+            (formContato.controls['nome'].touched || formContato.controls['nome'].dirty)"
+        />
+        <div 
+            *ngIf="formContato.controls['nome'].invalid && 
+            (formContato.controls['nome'].touched || formContato.controls['nome'].dirty)"
+        >
+            <small class="error-message" *ngIf="formContato.controls['nome'].hasError('minlength')">
+                Esse campo precisa no mínimo de 4 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['nome'].hasError('required')">
+                Esse campo precisa ser preenchido.
+            </small>
+        </div>
+        <input 
+            type="assunto" 
+            placeholder="Digite seu assunto" 
+            formControlName="assunto"
+            [class.valid]="formContato.controls['assunto'].valid"
+            [class.invalid]="formContato.controls['assunto'].invalid && 
+            (formContato.controls['assunto'].touched || formContato.controls['assunto'].dirty)"
+        />
+        <div 
+            *ngIf="formContato.controls['assunto'].invalid && 
+            (formContato.controls['assunto'].touched || formContato.controls['assunto'].dirty)"
+        >
+            <small class="error-message" *ngIf="formContato.controls['assunto'].hasError('minlength')">
+                Esse campo precisa no mínimo de 10 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['assunto'].hasError('required')">
+                Esse campo precisa ser preenchido.
+            </small>
+        </div>
+        <input 
+            type="tel" 
+            placeholder="(00) 0 0000-0000" 
+            formControlName="telefone"
+            [class.valid]="formContato.controls['telefone'].valid"
+            [class.invalid]="formContato.controls['telefone'].invalid && 
+            (formContato.controls['telefone'].touched || formContato.controls['telefone'].dirty)"
+        />
+        <div 
+            *ngIf="formContato.controls['telefone'].invalid && 
+            (formContato.controls['telefone'].touched || formContato.controls['telefone'].dirty)"
+        >
+            <small class="error-message" *ngIf="formContato.controls['telefone'].hasError('minlength')">
+                Esse campo precisa no mínimo de 11 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['telefone'].hasError('required')">
+                Esse campo precisa ser preenchido.
+            </small>
+        </div>
+        <input 
+            type="email" 
+            placeholder="Digite o seu e-mail" 
+            formControlName="email"
+            [class.valid]="formContato.controls['email'].valid"
+            [class.invalid]="formContato.controls['email'].invalid && 
+            (formContato.controls['email'].touched || formContato.controls['email'].dirty)"
+        />
+        <div 
+            *ngIf="formContato.controls['email'].invalid && 
+            (formContato.controls['email'].touched || formContato.controls['email'].dirty)"
+        >
+            <small class="error-message" *ngIf="formContato.controls['email'].hasError('email')">
+                Esse campo precisa ser um e-mail válido.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['email'].hasError('required')">
+                Esse campo precisa ser preenchido.
+            </small>
+        </div>
+        <textarea 
+            maxlength="300"
+            rows="4"
+            formControlName="mensagem"
+            [class.valid]="formContato.controls['mensagem'].valid"
+            [class.invalid]="formContato.controls['mensagem'].invalid && 
+            (formContato.controls['mensagem'].touched || formContato.controls['mensagem'].dirty)"
+        ></textarea>
+        <div 
+            *ngIf="formContato.controls['mensagem'].invalid && 
+            (formContato.controls['mensagem'].touched || formContato.controls['mensagem'].dirty)"
+        >
+            <small class="error-message" *ngIf="formContato.controls['mensagem'].hasError('mensagem')">
+                Esse campo precisa no mínimo de 20 caracteres.
+            </small>
+            <small class="error-message" *ngIf="formContato.controls['mensagem'].hasError('required')">
+                Esse campo precisa ser preenchido.
+            </small>
+        </div>
+        <button type="submit" [disabled]="formContato.invalid">Enviar</button>
     </form>
     <address>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3557.575243409005!2d-49.07492082564626!3d-26.91697234174424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1683253211508!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
